instance.tf
resource "aws_instance" "vault_ec2" {
    ami = var.ami
    count = var.vault_instance_count
    instance_type = var.vault_instance_type
    vpc_security_group_ids = [aws_security_group.vault_security_group.id]
    tags = merge(var.tags, map("Name", "${var.vault_instance_name}-${count.index}"))
    subnet_id = aws_subnet.public.*.id[0]
    key_name = aws_key_pair.deployer.id
    associate_public_ip_address = true

    user_data =<<-EOF
                #!/bin/sh

                cd /home/ubuntu

                sudo apt-get install zip unzip

                wget "${var.vault_dl_url}"
                wget https://raw.githubusercontent.com/tkaburagi/vault-configs/master/vault-tempate-aws.hcl

                unzip vault*.zip
                rm vault*zip

                chmod +x vault

                export AWS_SECRET_ACCESS_KEY=${var.secret_key}
                export AWS_ACCESS_KEY_ID=${var.access_key}
                export VAULT_AWSKMS_SEAL_KEY_ID=${aws_kms_key.kms_key.key_id}
                export API_ADDR_REPLACE=http://${var.vault_fqdn}
                export VAULT_ADDR=http://${var.vault_fqdn}

                sed "s|API_ADDR_REPLACE|`echo $API_ADDR_REPLACE`|g" vault-tempate-aws.hcl > config.hcl

                sleep 60

                nohup ./vault server -config /home/ubuntu/config.hcl start -log-level=debug > vault.log &

                ./vault operator init > .init.log

              EOF
}
